--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <Article>
         <h2 id="graham"><mark>Graham Wafer Pie</mark></h2>
             <figure>
-                <img src="/images/Graham.jpg" width="400" title="Graham Wafer Pie" alt="Graham Wafer Pie">
+                <img src="/Graham.jpg" width="400" title="Graham Wafer Pie" alt="Graham Wafer Pie">
                     <figcaption>fig. 1 - My absolute favorite pie.</figcaption>
             </figure>
     
