--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 id="pumpkin"><mark>Pumpkin Pie</mark></h2>
         <hr>
             <figure>
-                <img src="/images/PumpkinPie.jpg" width="400" title="Pumpkin Pie" alt="Pumpkin Pie">
+                <img src="PumpkinPie.jpg" width="400" title="Pumpkin Pie" alt="Pumpkin Pie">
                     <figcaption>fig. 2 - Add whipped cream for a perfect Holiday dessert.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
@@ -98,7 +98,7 @@
         <h2 id="carmelitas"><mark>Carmelitas - Caramel Chocolate Oatmeal Bars</mark></h2>
         <hr>
             <figure>
-                <img src="/images/carmelitas.jpg" width="400" title="Carmelitas" alt="Carmelitas">
+                <img src="carmelitas.jpg" width="400" title="Carmelitas" alt="Carmelitas">
                     <figcaption>fig. 3 - Chewy deliciousness.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
