Recipes Week 3 - image correction

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <Article>
         <h2 id="graham"><mark>Graham Wafer Pie</mark></h2>
             <figure>
-                <img src="/images/Graham.jpg" title="Graham Wafer Pie" alt="Graham Wafer Pie">
+                <img src="Graham.jpg" title="Graham Wafer Pie" alt="Graham Wafer Pie">
                     <figcaption>fig. 1 - My absolute favorite pie.</figcaption>
             </figure>
     
@@ -87,7 +87,7 @@
         <h2 id="pumpkin"><mark>Pumpkin Pie</mark></h2>
         <hr>
             <figure>
-                <img src="/images/PumpkinPie.jpg" title="Pumpkin Pie" alt="Pumpkin Pie">
+                <img src="PumpkinPie.jpg" title="Pumpkin Pie" alt="Pumpkin Pie">
                     <figcaption>fig. 2 - Add whipped cream for a perfect Holiday dessert.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
@@ -118,7 +118,7 @@
         <h2 id="carmelitas"><mark>Carmelitas - Caramel Chocolate Oatmeal Bars</mark></h2>
         <hr>
             <figure>
-                <img src="/images/carmelitas.jpg" title="Carmelitas" alt="Carmelitas">
+                <img src="carmelitas.jpg" title="Carmelitas" alt="Carmelitas">
                     <figcaption>fig. 3 - Chewy deliciousness.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
