img change week 4

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <Article>
         <h2 id="graham" class="recipename">Graham Wafer Pie</h2>
             <figure>
-                <img src="images/Graham.jpg" title="Graham Wafer Pie" alt="Graham Wafer Pie">
+                <img src="Graham.jpg" title="Graham Wafer Pie" alt="Graham Wafer Pie">
                     <figcaption>fig. 1 - My absolute favorite pie.</figcaption>
             </figure>
     
@@ -110,7 +110,7 @@
     <article>
         <h2 id="pumpkin" class="recipename">Pumpkin Pie</h2>
             <figure>
-                <img src="images/PumpkinPie.jpg" title="Pumpkin Pie" alt="Pumpkin Pie">
+                <img src="PumpkinPie.jpg" title="Pumpkin Pie" alt="Pumpkin Pie">
                     <figcaption>fig. 2 - Add whipped cream for a perfect Holiday dessert.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
@@ -140,7 +140,7 @@
     <article>
         <h2 id="carmelitas" class="recipename">Carmelitas - Caramel Chocolate Oatmeal Bars</h2>
             <figure>
-                <img src="images/carmelitas.jpg" title="Carmelitas" alt="Carmelitas">
+                <img src="carmelitas.jpg" title="Carmelitas" alt="Carmelitas">
                     <figcaption>fig. 3 - Chewy deliciousness.</figcaption>
             </figure>
         <h4>List of ingredients:</h4>
