--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 id="recipe_list">My Favorite Recipes</h1>
     <nav>
+        <h5>Menu</h5>
         <ul>
             <li><a href="#graham">Graham Wafer Pie</a></li>
             <li><a href="#pumpkin">Pumpkin Pie</a></li>
