--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>My Favorite Recipes</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
